<resources>
    <string name="app_name">Matchbaker</string>
    <string name="server_url">http://192.168.0.18:8080</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>

    <string name="person_name">Fullname of person</string>
    <string name="person_country">Country</string>
    <string name="person_hometown">Hometown</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_auth_fragment">Hello Auth fragment</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_old_geo_loc">OldGeoLocActivity</string>
    <string name="title_activity_nav_drawer_main">NavDrawerMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="useSocialConnections">Use social connections</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_share_phone_number">Share phone number with friends</string>
    <string name="pref_description_share_phone_number">Share phone number with friends so they may send you sms through the app
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_discover_matches_fragment">Hello discover matches fragment</string>
    <string name="about_me_dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="profile_not_complete_message">Your profile seems incomplete. In order to receive notifcations for recommended partners, please complete fully your profile.</string>

    <string name="press_and_hold_heart">If you like this person, press the heart and hold it 3 seconds.</string>
    <string name="lbl_about_me">About me</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">Register</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_city">City</string>
    <string name="hint_age">Age</string>
    <string name="hint_country">Country</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_pers_race">Race</string>
    <string name="go_out_question">How often do you go out (not necessarily on dates)?</string>
    <string name="imprace_question">How important is it to you (on a scale of 1 - 10) that a person you date be of the same racial/ethnic background?</string>
    <string name="imprelig_question">How important is it to you (on a scale 1-10) that person you date be of the same religious background?</string>
    <string name="activities_question">How interested are you in the following activities? (on a scale of 1 - 10)</string>
    <string name="hint_pers_career">Career</string>
    <string name="hint_pers_go_out">How often do you go out?</string>
    <string name="lbl_sports">Sports</string>
    <string name="lbl_tvsports">TV Sports</string>
    <string name="lbl_excersice">Excersice</string>
    <string name="lbl_dining">Dining</string>
    <string name="lbl_museums">Museums</string>
    <string name="lbl_art">Art</string>
    <string name="lbl_hiking">Hiking</string>
    <string name="lbl_gaming">Gaming</string>
    <string name="lbl_clubbing">Clubbing</string>
    <string name="lbl_reading">Reading</string>
    <string name="lbl_tv">TV</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_concerts">Concerts</string>
    <string name="lbl_music">Music</string>
    <string name="lbl_shopping">Shopping</string>
    <string name="lbl_yoga">Yoga</string>
    <string name="psychology_distribute_points_text">Please distribute 100 points amoung six attributes for each question.</string>
    <string name="psychology_question_a">1. What YOU look for in the opposite sex?</string>
    <string name="psychology_question_b">2. What do you think the opposite sex looks in for a date?</string>
    <string name="psychology_question_c">3. How do you think you measure up?</string>
    <string name="lbl_remaining_points">Remaining points</string>
    <string name="lbl_attractive">Attractive</string>
    <string name="lbl_sincere">Sincere</string>
    <string name="lbl_intelligent">Intelligent</string>
    <string name="lbl_fun">Fun</string>
    <string name="lbl_ambitious">Ambitious</string>
    <string name="lbl_shared_interests">Shared Interests</string>
    <string name="hint_pers_field">Field</string>


    <string-array name="race_array">
        <item>Black/African-American</item>
        <item>European/Caucasian-American</item>
        <item>Latino/Hispanic-American</item>
        <item>Asian/Hispanic-American</item>
        <item>Asian/Pacific Islander/Asian-American</item>
        <item>Native American</item>
        <item>Other</item>
    </string-array>

    <string-array name="field_array">
        <item>Law</item>
        <item>Math</item>
        <item>Social Science/Psychologist</item>
        <item>Medical Science/Pharmaceuticals/Bio Tech</item>
        <item>Engineering</item>
        <item>Native Language/Creative Writing/Journalism</item>
        <item>History/Religion/Philosophy</item>
        <item>Business/Econ/Finance</item>
        <item>Education/Academia</item>
        <item>Biological Sciences/Chemistry/Physics</item>
        <item>Undergrad/Undecided</item>
        <item>Political Science/International Affairs</item>
        <item>Film</item>
        <item>Fine Arts/International Affairs</item>
        <item>Languages</item>
        <item>Architecture</item>
        <item>Other</item>
    </string-array>

    <string-array name="career_array">
        <item>Lawyer</item>
        <item>Academic/Research</item>
        <item>Psychologist</item>
        <item>Doctor/Medicine</item>
        <item>Engineer</item>
        <item>Creative Arts/Entertainment</item>
        <item>Banking/Consulting/Finance/Marketing/Business/CEO/Entrepreneur/Admin</item>
        <item>Real Estate</item>
        <item>International/Humanitarian Affairs</item>
        <item>Undecided</item>
        <item>Social Work</item>
        <item>Speech Patalogy</item>
        <item>Politics</item>
        <item>Pro sports/Athletics</item>
        <item>Other</item>
        <item>Journalism</item>
        <item>Architecture</item>
    </string-array>

    <string-array name="go_out_array">
        <item>Several times a week</item>
        <item>Twice a week</item>
        <item>Once a week</item>
        <item>Twice a month</item>
        <item>Once a month</item>
        <item>Several times a year</item>
        <item>Almost never</item>
    </string-array>

    <string name="facebook_app_id">1841733226100364</string>

    <string name="oauth_web_client_id">651400288301-c95dhod2eb8g0ca9deedu3oum030cdde.apps.googleusercontent.com</string>
    <string name="hint_date">Date of birth</string>
    <string name="hint_about_me">About me</string>
    <string name="hookup_recommendations_counter_text">recommended persons are in the same city!</string>
    <string name="nearest_recommended_text">Nearest recommended person distance:</string>
    <string name="action_refresh">Refresh</string>

</resources>
