<?xml version="1.0" encoding="utf-8"?>
<hookupandroid.customComponents.SelfMeasureQuestionGroupView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_remaining_points" />
        <TextView
            android:id="@+id/remaming_points_value"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="100" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_attractive"/>
        <include android:id="@+id/attractive_seek_bar" layout="@layout/seekbar_scale100"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sincere"/>
        <include android:id="@+id/sincere_seek_bar" layout="@layout/seekbar_scale100"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_intelligent"/>
        <include android:id="@+id/intelligent_seek_bar" layout="@layout/seekbar_scale100"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_fun"/>
        <include android:id="@+id/fun_seek_bar" layout="@layout/seekbar_scale100"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ambitious"/>
        <include android:id="@+id/ambitious_seek_bar" layout="@layout/seekbar_scale100"></include>
    </LinearLayout>


</hookupandroid.customComponents.SelfMeasureQuestionGroupView>