<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hookupandroid.fragments.personalizationFragmentPages.BasicInfoPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Race"/>
            <Spinner
                android:id="@+id/input_pers_race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/race_array"
                android:hint="@string/hint_pers_race" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Field of study"/>
            <Spinner
                android:id="@+id/input_pers_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/field_array"
                android:hint="@string/hint_pers_field" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Career"/>
            <Spinner
                android:id="@+id/input_pers_career"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/career_array"
                android:hint="@string/hint_pers_career" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_out_question"/>
            <Spinner
                android:id="@+id/input_pers_go_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/go_out_array"
                android:hint="@string/hint_pers_go_out" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imprace_question"/>
            <include android:id="@+id/imprace_seek_bar" layout="@layout/seekbar_scale10"></include>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imprelig_question"/>
            <include android:id="@+id/imprelig_seek_bar" layout="@layout/seekbar_scale10"></include>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:src="@drawable/left_circle_filled"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
