<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="hookupandroid.fragments.ViewNonFriendProfileFragment">


        <android.support.v7.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/user1" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_non_friend_view_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Firstname Lastname" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/lbl_about_me" />


        <TextView
            android:id="@+id/txt_non_friend_view_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_border"
            android:gravity="center"
            android:text="@string/hello_blank_fragment" />


        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/heart" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/press_and_hold_heart" />


    </LinearLayout>
</ScrollView>
